	* [general]
		* Allow to customize which actions have to be shown in the toolbars
		* Expose more column related actions the context menu in the project (plot data, etc.) also when multiple columns are selected
		* Add possibility to skip storing the data from columns and matrices in the saved file
	* [analysis]
		* Save and load custom functions for fit, equation curve and function values
	* [spreadsheet]
		* allow to drop entire rows in the spreadsheet if the condition was met in the "Drop Values Dialog" for the selected columns
	* [worksheet]
		* Inset plot areas - plot areas added as child of another plot area
		* Improved axis ticks location. They don't need to be always placed at the edges of the axis if does not look nicely (!700)
		* Allow to position the center and limit lines in the process behavior chart based on user-defined specifications
	* [import]
		* Import directories - import multiple files in a directory in one single step
		* Allow to import arrays in JSON files that contain plain data only
	* [examples]
		* Added "All" in the examples dialog to navigate and search in the example projects from _all_ collections

Performance improvements:
		* Improved drawing performance (!731)
		* Improved the performance of importing JSON files with a large number of elements

Bug fixes:
	* Fix displayed locale of constants
	* Rename of psi constant to psqi to avoid clash with psi function
	* Fix crash when loading a project with a workbook as first child (!787)
	* Fix updating column count in spreadsheet dock when importing data from file
	* Fix appending data to spreadsheets from XLSX files

-----2.12.1 (2025-08-15) -----
Bug fixes:
	* Fix using default font for axis title
	* Fix build with system QXlsx (!693)
	* Fix build with system QADS 4.4 (!694)
	* Crash on import when no projects opened (BUG 503800)
	* Save rotation of axis title seperately for x and y axis
	* Fix disappearing axis ticks (#1146)